game server quase la

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "p-cancelable": "^4.0.1",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
   }
